--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14"
+    },
+    "dependencies": {
+        "gutenberg-css": "^0.7.0"
     }
 }
